--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-#scs==2.0.2
+scs==2.0.2
 numpy==1.16.2
 scipy==1.2.1
-#cvxpy==1.0.21
-#cvxopt==1.2.3
+cvxpy==1.0.21
+cvxopt==1.2.3
 Pillow==5.3.0
 Flask==0.12.2
 google-cloud-datastore==1.6.0
@@ -13,12 +13,11 @@ PyMongo==3.6.0
 six==1.11.0
 Flask-RESTful==0.3.5
 diskcache==3.0.6
-#google-api-python-client==1.5.0
+google-api-python-client==1.5.0
 boto3==1.2.3
 botocore==1.10.30
 pandas==0.23.0
 azure==3.0.0
-#python-memcached==1.59
 sympy==1.1.1
 PyYAML==3.12
 openpyxl==2.5.3
@@ -43,7 +42,7 @@ gspread==3.1.0
 oauth2client==4.1.3
 onesignal-sdk==1.0.0
 pydash==4.7.4
-# elasticsearch==7.0.0
+elasticsearch==7.0.0
 redis==3.2.1
 google-cloud-bigquery==1.11.3
 colorlog==4.0.2
@@ -51,5 +50,3 @@ google-cloud-logging==1.10.0
 google-cloud-error-reporting==0.31.0
 sendgrid
 python_http_client
-
-
