--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,269 @@
-scs==2.0.2
-numpy==1.16.2
-scipy==1.2.1
-cvxpy==1.0.21
-cvxopt==1.2.3
-Pillow==5.3.0
-Flask==0.12.2
-google-cloud-datastore==1.6.0
-gunicorn==19.7.1
-Flask-SQLAlchemy==2.3.2
-PyMySQL==0.8.0
-PyMongo==3.6.0
-six==1.11.0
-Flask-RESTful==0.3.5
-diskcache==3.0.6
-boto3==1.2.3
-botocore==1.10.30
-pandas==0.23.0
+absl-py==0.2.2
+adal==1.0.2
+aniso8601==3.0.2
+asn1crypto==0.24.0
+astor==0.6.2
 azure==3.0.0
-sympy==1.1.1
-PyYAML==3.12
-openpyxl==2.5.3
-pandas-gbq==0.4.1
-python-appengine==1.9.15
-google-cloud-storage==1.15.0
-xlrd==1.1.0
-pycrypto==2.6.1
-opencv-python==3.3.0.9
-google-api-python-client==1.7.4
-google-auth==1.5.1
+azure-batch==4.1.3
+azure-common==1.1.12
+azure-cosmosdb-nspkg==2.0.2
+azure-cosmosdb-table==1.0.4
+azure-datalake-store==0.0.22
+azure-eventgrid==0.1.0
+azure-graphrbac==0.40.0
+azure-keyvault==0.3.7
+azure-mgmt==2.0.0
+azure-mgmt-advisor==1.0.1
+azure-mgmt-applicationinsights==0.1.1
+azure-mgmt-authorization==0.30.0
+azure-mgmt-batch==5.0.1
+azure-mgmt-batchai==0.2.0
+azure-mgmt-billing==0.1.0
+azure-mgmt-cdn==2.0.0
+azure-mgmt-cognitiveservices==2.0.0
+azure-mgmt-commerce==1.0.1
+azure-mgmt-compute==3.0.1
+azure-mgmt-consumption==2.0.0
+azure-mgmt-containerinstance==0.3.1
+azure-mgmt-containerregistry==1.0.1
+azure-mgmt-containerservice==3.0.1
+azure-mgmt-cosmosdb==0.3.1
+azure-mgmt-datafactory==0.4.0
+azure-mgmt-datalake-analytics==0.3.0
+azure-mgmt-datalake-nspkg==2.0.0
+azure-mgmt-datalake-store==0.3.0
+azure-mgmt-devtestlabs==2.2.0
+azure-mgmt-dns==1.2.0
+azure-mgmt-eventgrid==0.4.0
+azure-mgmt-eventhub==1.2.0
+azure-mgmt-hanaonazure==0.1.1
+azure-mgmt-iothub==0.4.0
+azure-mgmt-iothubprovisioningservices==0.1.0
+azure-mgmt-keyvault==0.40.0
+azure-mgmt-loganalytics==0.1.0
+azure-mgmt-logic==2.1.0
+azure-mgmt-machinelearningcompute==0.4.1
+azure-mgmt-managementpartner==0.1.0
+azure-mgmt-marketplaceordering==0.1.0
+azure-mgmt-media==0.2.0
+azure-mgmt-monitor==0.4.0
+azure-mgmt-msi==0.1.0
+azure-mgmt-network==1.7.1
+azure-mgmt-notificationhubs==1.0.0
+azure-mgmt-nspkg==2.0.0
+azure-mgmt-powerbiembedded==1.0.0
+azure-mgmt-rdbms==0.1.0
+azure-mgmt-recoveryservices==0.2.0
+azure-mgmt-recoveryservicesbackup==0.1.1
+azure-mgmt-redis==5.0.0
+azure-mgmt-relay==0.1.0
+azure-mgmt-reservations==0.1.0
+azure-mgmt-resource==1.2.2
+azure-mgmt-scheduler==1.1.3
+azure-mgmt-search==1.0.0
+azure-mgmt-servermanager==1.2.0
+azure-mgmt-servicebus==0.4.0
+azure-mgmt-servicefabric==0.1.0
+azure-mgmt-sql==0.8.6
+azure-mgmt-storage==1.5.0
+azure-mgmt-subscription==0.1.0
+azure-mgmt-trafficmanager==0.40.0
+azure-mgmt-web==0.34.1
+azure-nspkg==2.0.0
+azure-servicebus==0.21.1
+azure-servicefabric==6.1.2.9
+azure-servicemanagement-legacy==0.20.6
+azure-storage-blob==1.3.0
+azure-storage-common==1.3.0
+azure-storage-file==1.3.0
+azure-storage-nspkg==3.0.0
+azure-storage-queue==1.3.0
+backports-abc==0.5
+backports.functools-lru-cache==1.5
+backports.shutil-get-terminal-size==1.0.0
+backports.weakref==1.0.post1
+bcrypt==3.1.4
+bleach==1.5.0
+boto3==1.7.49
+botocore==1.10.49
+cachetools==2.1.0
+certifi==2018.4.16
+cffi==1.11.5
+chardet==3.0.4
+click==6.7
+cloudpickle==0.5.3
+colorama==0.3.9
+configparser==3.5.0
+cryptography==2.2.2
+cycler==0.10.0
+dask==0.18.1
+decorator==4.3.0
+diskcache==3.0.6
+docutils==0.14
+entrypoints==0.2.3
+enum34==1.1.6
+et-xmlfile==1.0.1
+Flask==1.0.2
+Flask-PyMongo==2.0.0
+Flask-RESTful==0.3.6
+Flask-SQLAlchemy==2.3.2
+funcsigs==1.0.2
+functools32==3.2.3.post2
+futures==3.2.0
+fuzzywuzzy==0.16.0
+gast==0.2.0
+gdown==3.5.0
+#google-api-core==1.2.1
+#google-api-python-client==1.7.3
+google-auth==1.5.0
 google-auth-httplib2==0.0.3
-google-compute-engine==2.8.3
-pymemcache==2.0.0
-Flask-HTTPAuth==3.2.4
-pyfcm==1.4.5
-google-cloud-vision==0.35.1
+#google-auth-oauthlib==0.2.0
+google-cloud-bigquery==1.3.0
+google-cloud-core==0.28.1
+google-cloud-datastore==1.6.0
+google-cloud-logging==1.6.0
+google-cloud-monitoring==0.30.1
+google-cloud-storage==1.10.0
+google-resumable-media==0.3.1
+googleapis-common-protos==1.5.3
+graypy==0.3
+grpcio==1.13.0
+gunicorn==19.8.1
+h5py==2.8.0
+html5lib==0.9999999
+httplib2==0.11.3
+idna==2.7
+imutils==0.4.6
+ipaddress==1.0.22
+ipykernel==4.8.2
+ipython==5.7.0
+ipython-genutils==0.2.0
+ipywidgets==7.2.1
+isodate==0.6.0
+iteration_utilities==0.7.0
+itsdangerous==0.24
+jdcal==1.4
+Jinja2==2.10
+jmespath==0.9.3
 jsonschema==2.6.0
-statistics==1.0.3.5
-shapely==1.6.4.post2
-gspread==3.1.0
-oauth2client==4.1.3
-onesignal-sdk==1.0.0
+jupyter==1.0.0
+jupyter-client==5.2.3
+jupyter-console==5.2.0
+jupyter-core==4.4.0
+Keras==2.2.4
+Keras-Applications==1.0.6
+Keras-Preprocessing==1.0.5
+keras-resnet==0.1.0
+keyring==13.1.0
+kiwisolver==1.0.1
+lml==0.0.1
+Markdown==2.6.11
+MarkupSafe==1.0
+matplotlib==2.2.2
+mistune==0.8.3
+mock==2.0.0
+mpmath==1.0.0
+msrest==0.5.1
+msrestazure==0.4.34
+nbconvert==5.3.1
+nbformat==4.4.0
+networkx==2.1
+nose==1.3.7
+notebook==5.5.0
+numpy==1.15.1
+#oauthlib==2.1.0
+opencv-contrib-python==3.4.2.17
+openpyxl==2.5.4
+pandas==0.23.1
+pandas-gbq==0.5.0
+pandocfilters==1.4.2
+paramiko==2.4.1
+pathlib2==2.3.2
+pbr==4.0.4
+pexpect==4.6.0
+pickleshare==0.7.4
+Pillow==5.2.0
+progressbar2==3.38.0
+prompt-toolkit==1.0.15
+protobuf==3.6.0
+psutil==5.6.0
+ptyprocess==0.6.0
+pyasn1==0.4.3
+pyasn1-modules==0.2.2
+pycparser==2.18
+pyenchant==2.0.0
+pyexcel==0.5.8
+pyexcel-io==0.5.7
+pyexcel-xls==0.5.7
+Pygments==2.2.0
+PyJWT==1.6.4
+pylibmc==1.5.2
+pymemcache==2.1.0
+pymongo==3.7.0
+PyMySQL==0.9.1
+PyNaCl==1.2.1
+pyOpenSSL==18.0.0
+pyparsing==2.2.0
+#python-appengine==1.9.15
+python-dateutil==2.7.3
+python-Levenshtein==0.12.0
+python-memcached==1.59
+pytz==2018.5
+PyWavelets==0.5.2
+PyYAML==3.12
+pyzmq==17.0.0
+q==2.6
+qtconsole==4.3.1
+requests==2.19.1
+requests-oauthlib==1.0.0
+rsa==3.4.2
+s3transfer==0.1.13
+scandir==1.7
+scikit-image==0.14.0
+scikit-learn==0.19.1
+scipy==1.1.0
+Shapely==1.6.4.post2
+SecretStorage==2.3.1
+Send2Trash==1.5.0
+setuptools==40.4.3
+sftpsync==1.0.12
+simplegeneric==0.8.1
+simplejson==3.16.0
+singledispatch==3.4.0.3
+six==1.11.0
+sklearn==0.0
+SQLAlchemy==1.2.9
+subprocess32==3.5.2
+sympy==1.1.1
+tensorboard==1.8.0
+tensorflow-gpu==1.8.0
+termcolor==1.1.0
+terminado==0.8.1
+testpath==0.3.1
+texttable==1.4.0
+#Theano==1.0.2
+toolz==0.9.0
+toposort==1.5
+torch==1.0.1.post2
+torchvision==0.2.2.post3
+tornado==5.0.2
+traitlets==4.3.2
+typing==3.6.4
+ujson==1.35
+uritemplate==3.0.0
+urllib3==1.23
+wcwidth==0.1.7
+Werkzeug==0.14.1
+widgetsnbextension==3.2.1
+xlrd==1.1.0
+XlsxWriter==1.0.5
+xlwt==1.3.0
+billiard==3.5.0.4
+xgboost==0.80
+python-http-client==3.1.0
+ortools==7.1.6720
+PyMaxFlow==1.2.11
+joblib
 pydash==4.7.4
-elasticsearch==7.0.0
 redis==3.2.1
-google-cloud-bigquery==1.11.3
-colorlog==4.0.2
-google-cloud-logging==1.10.0
-google-cloud-error-reporting==0.31.0
 sendgrid
-python_http_client
